Change Log for OpenXava project
===============================

- Fix: Unable to remove actions dynamically, with removeActions(), from a subcontroller.
- Fix: Parsing error in list filter for Timestamp and DATETIME for certain languages like Croatian.
- Fix: Pressing ENTER to filter in list by date range does not work.
- Fix: Upload editor property (like @Files) not shown when alone in a section with flowLayout=false.
- Fix: Upload editor property (like @Files) does not fill all width if alone in a section with flowLayout=true.
- Fix: Annotated web elements in Addons are not recognized when executing application from OpenXava Studio.
- Fix: Collection count in section label is not updated when collection inside section is refreshed.
- Fix: Broken links in View chapter of reference guide and Lesson 5 of the course.
- Fix: Tab.setConditionValue() and MetaProperty.format() do not support boolean values.
- Fix: Enum combos are displayed as disabled even when they are enabled with latest Firefox versions. 
- Fix: Inaccurate @DescriptionsList documentation in reference guide (View chapter). 
- Fix: Screenshot of lesson 7 of the course for dropping tables does not show the correct tables.
- Fix: Calculated property dependent on a @Coordinates property is not recalculated when clicking on the map.
- Fix: Read only @Coordinates property can be modified clicking on the map.
- Fix: Grouping by an enum property in list fails.
- Fix: ModuleTestBase.get/assertValueInList() not interpret line breaks consistently between operating systems. 
- Fix: JUnit suite does not pass at 100% on Linux.
- Fix: @GenericGenerator annotation missing in sample code of course, so course code does not work.
- Fix: @Id property with @DefaultValueCalculator dependent in an entity with an @ElementCollection doesn't work.
- Fix: Calculated properties whose calculation depends on references fail recalculating after a change event. 