@@ -11,8 +11,7 @@
   </head>
   <body>
     <div class="wiki" style="display: block;">
-      <h1 id="toc0"><a name="agile-development"></a> <span id="breadcrumbs"> <span
-
+      <h1 id="toc0"><a name="agile-development"></a> <span id="breadcrumbs"> <span
             id="openxava"> <a href="https://www.openxava.org/"> <span>o</span>pen<span>x</span>ava
               </a> </span> / <a href="index_en.html">documentation</a> / </span>
         Lesson 5: Agile development</h1>
@@ -48,11 +47,10 @@
       Nowadays agile development is no longer a “new and breaking technique”,
       but an established way to do software development, even the ideal way to
       go for many people.<br>
-      If you are not familiar with agile development you can have a look at <a
-
-        href="https://agilemanifesto.org">agilemanifesto.org</a>.
-      Basically, agile development encourages the use of feedback from a working
-      product over a careful upfront design. This gives a more prominent role to
+      If you are not familiar with agile development you can have a look at <a
+        href="https://agilemanifesto.org">agilemanifesto.org</a>. Basically,
+      agile development encourages the use of feedback from a working product
+      over a careful upfront design. This gives a more prominent role to
       programmers and users, and minimizes the importance of analysts and
       software architects.<br>
       This type of development also needs a different type of tools. Because you
@@ -105,8 +103,7 @@ Author author;
       entity has a reference to <em>Author</em>.<br>
       Really you have written a little amount of code. In order to see the
       effect, restart your application clicking on <i>Run</i> button:</div>
-    <div class="wiki" style="display: block;"><img src="files/getting-started_en195.png"
-
+    <div class="wiki" style="display: block;"><img src="files/getting-started_en195.png"
         alt="getting-started_en195.png" title="getting-started_en195.png"> </div>
     <div class="wiki" style="display: block;">Then go to the browser and reload
       the page with the <em>Product</em> module, and you will see there, a
@@ -136,9 +133,9 @@ Collection&lt;Product&gt; products;
       full user interface to manage it. In this case the user can click on <em>Add</em>
       button to choose a book from a list of all existing books or click on <i>New</i>
       to enter the data to create a new book that will be added to the
-      collection. Moreover when the author is removed his books are still there
-      in the database. You can define another behavior with cascade as REMOVE or
-      ALL, thus:</div>
+      collection. Moreover, the author cannot be removed while he has books
+      associated to him. You can define another behavior with cascade as REMOVE
+      or ALL, thus:</div>
     <div class="wiki" style="display: block;">
       <pre><code class="java">@OneToMany(mappedBy="author", cascade=CascadeType.REMOVE) // DON'T ADD IT TO YOUR CODE
 </code></pre> </div>
@@ -161,12 +158,10 @@ Collection&lt;Product&gt; products;
       for your user.<br>
       You will learn all these advanced topics in the forthcoming lessons.<br>
       <br>
-      <strong><a class="wiki_link_ext" href="https://sourceforge.net/projects/openxava/files/openxava-course-source-code/openxava-course-source-code-lesson-2-modeling_en.zip/download"
-
+      <strong><a class="wiki_link_ext" href="https://sourceforge.net/projects/openxava/files/openxava-course-source-code/openxava-course-source-code-lesson-2-modeling_en.zip/download"
           rel="nofollow">Download source code of this lesson</a></strong><br>
       <br>
-      <strong>Any problem with this lesson? <a class="wiki_link_ext" href="http://sourceforge.net/p/openxava/discussion/419690/"
-
+      <strong>Any problem with this lesson? <a class="wiki_link_ext" href="http://sourceforge.net/p/openxava/discussion/419690/"
           rel="nofollow">Ask in the forum</a></strong> <strong>Everything fine?
         <a class="wiki_link" href="mapped-superclass-inheritance_en.html">Go to
           Lesson 6</a></strong> </div>
